# pico-vision

./: LICENSE  LICENSE_ZH  PV1.md  README.md  main.py  pico_client.py  send_frame.py  system_monitor.py  test.py
3d/: pico_2inch_tft_minimal_landscape_case.scad  pico_2inch_tft_minimal_landscape_case.stl  usb_rp2040_4m_dongle_case_v2.scad  usb_rp2040_4m_dongle_case_v2.stl
doc/: ST7789_WIRING_README.md  WINDOWS_COMPATIBILITY.md  style_horizontal_disk.md
driver/: micropython-RPI_PICO-v1.0.32-fnCanvas.uf2  micropython-RPI_PICO-v1.0.43-fnProcotolV1.uf2
esp32-s3/: README.md  button_controller.py  canvas.py  canvasC.py  color_manager.py  config.py  dashboard.py  data_receiver.py  fatal_policy.py  font_5x7.py  font_builtin.py  font_screen_2inch.py  main.py  protocol.py  protocolC.py  render_service.py  timeIncrease.py  upgrade_manager.py  usb_transport.py
firmware/: README.md
monitor/: .gitattributes  DISK_README.md  README.md  build-exe.bat  build_info.py  constants.py  custom_data.py  custom_data_runner.py  history.py  install-linux.sh  json_ack_timing_cache.py  monitor_update.py  pico_ack.py  pico_client.py  pico_commands.py  pico_monitor.py  pico_monitor.spec  pico_monitor_setup.iss  pico_protocol.py  pico_snapshot.py  pico_upgrade.py  prepare-plugin-runtime.ps1  qbittorrent_config.md  qbittorrent_monitor.py  requirements-build.txt  requirements.txt  sdk_flash.py  style_validator.py  system_monitor.py  test-windows.bat  usbCdcFramework.py  windows_settings.py  windows_tray.py  windows_update.py  (+1 more)
monitor/win/fps/bridge/: CMakeLists.txt  adlx_fps_bridge.cpp
(+350 files in other folders)
